WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62736
Fix possible null dereference in webSecKeychainItemCreateFromContentOnMainThread
https://bugs.webkit.org/show_bug.cgi?id=62736
Summary
Fix possible null dereference in webSecKeychainItemCreateFromContentOnMainThread
Anders Carlsson
Reported
2011-06-15 10:14:27 PDT
Fix possible null dereference in webSecKeychainItemCreateFromContentOnMainThread
Attachments
Patch
(1.42 KB, patch)
2011-06-15 10:18 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-06-15 10:18:02 PDT
Created
attachment 97318
[details]
Patch
Anders Carlsson
Comment 2
2011-06-15 10:32:36 PDT
Committed
r88956
: <
http://trac.webkit.org/changeset/88956
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug