2011-06-15  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Fix possible null dereference in webSecKeychainItemCreateFromContentOnMainThread
        https://bugs.webkit.org/show_bug.cgi?id=62736
        <rdar://problem/9601595>

        * WebProcess/mac/KeychainItemShimMethods.mm:
        (WebKit::webSecKeychainItemCreateFromContentOnMainThread):
        SecKeychainItemCreateFromContent can potentially return a null keychain item, so add a null check before trying to retain it.


Canonical link: https://commits.webkit.org/78305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88956 268f45cc-cd09-0410-ab3c-d52691b4dbfc